<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_expense_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- NAME FIELD -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/name_description_field_hint_text"
        android:inputType="text" />

    <!-- AMOUNT FIELD -->
    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/amount_field_hint_text"
        android:inputType="numberDecimal" />

    <!-- DATE FIELD -->
    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:focusable="false"
        android:hint="@string/date_field_hint_text" />

    <!-- CATEGORY DROPDOWN -->
    <AutoCompleteTextView
        android:id="@+id/actvCategory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/category_dropdown_hint_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:orientation="horizontal">

        <!-- CANCEL BUTTON -->
        <Button
            android:id="@+id/btnCancel"
            style="@style/ShapeAppearanceOverlay.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetRight="8dp"
            android:text="@string/cancel_button_text"
            android:textSize="18sp" />

        <!-- SAVE BUTTON -->
        <Button
            android:id="@+id/btnSave"
            style="@android:style/TextAppearance.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_button_text"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>